feat: Update dependencies and enhance styling
Updates React, Recharts, and Framer Motion to latest compatible versions. Also, improves styling by adding a custom scrollbar and adjusting the background color for a better user experience. Explicitly imports the entry module in index.html to fix potential blank screen issues on static hosting platforms.

--- a/index.html
+++ b/index.html
@@ -11,21 +11,42 @@
         body {
             font-family: 'Noto Sans SC', sans-serif;
             scroll-behavior: smooth;
+            margin: 0;
+            padding: 0;
+            background-color: #fafbfc;
+        }
+        /* 自定义滚动条 */
+        ::-webkit-scrollbar {
+            width: 6px;
+        }
+        ::-webkit-scrollbar-track {
+            background: #f1f1f1;
+        }
+        ::-webkit-scrollbar-thumb {
+            background: #cbd5e1;
+            border-radius: 10px;
+        }
+        ::-webkit-scrollbar-thumb:hover {
+            background: #94a3b8;
         }
     </style>
-<script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "recharts": "https://esm.sh/recharts@^3.6.0",
-    "framer-motion": "https://esm.sh/framer-motion@^12.24.11"
-  }
-}
-</script>
+    <script type="importmap">
+    {
+      "imports": {
+        "react": "https://esm.sh/react@19.0.0",
+        "react/": "https://esm.sh/react@19.0.0/",
+        "react-dom": "https://esm.sh/react-dom@19.0.0",
+        "react-dom/": "https://esm.sh/react-dom@19.0.0/",
+        "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+        "recharts": "https://esm.sh/recharts@2.15.0?deps=react@19.0.0,react-dom@19.0.0",
+        "framer-motion": "https://esm.sh/framer-motion@11.11.17?deps=react@19.0.0,react-dom@19.0.0"
+      }
+    }
+    </script>
 </head>
 <body class="bg-gray-50 text-gray-900">
     <div id="root"></div>
+    <!-- 显式引入入口模块，修复静态托管平台白屏问题 -->
+    <script type="module" src="index.tsx"></script>
 </body>
 </html>
