--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
         ::-webkit-scrollbar-thumb:hover {
             background: #94a3b8;
         }
+
+        /* 消除 Recharts 扇区点击时的方形选中框 */
+        .recharts-sector:focus,
+        .recharts-pie-sector:focus,
+        path:focus {
+            outline: none !important;
+        }
     </style>
     <script type="importmap">
     {
